--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             <div class="card-item" data-year="2017">
               <div class="card-item-title">Store Manager at <span>Kheteshwar Dryfruits</span></div>
               <div class="card-item-desc">Location: Parvat Patiya, Surat<br>
-              Work: Dryfruit Sales & Gift Packing<br>
+              Work: Dryfruit Sales<br>
                 Instagram : <a href="https://www.instagram.com/kheteshwar_dry_fruits" rel="noreferrer noopener">@kheteshwar_dry_fruits</a>
               </div>
             </div>
