--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
           <p class="card-desc">
             Singing, Travelling, Reading,</br>
             Kabaddi, Cricket, Badminton,</br>
-            Swimming, Yoga, Gardening
+            Swimming, Yoga
           </p>
         </div>
         <div class="card-social">
