--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
           <p class="card-desc">
             Singing, Travelling, Reading,</br>
             Kabaddi, Cricket, Badminton,</br>
-            Swimming, Yoga
+            Swimming, Yoga, Gardening
           </p>
         </div>
         <div class="card-social">
@@ -493,7 +493,7 @@
             <div class="card-item" data-year="2017">
               <div class="card-item-title">Store Manager at <span>Kheteshwar Dryfruits</span></div>
               <div class="card-item-desc">Location: Parvat Patiya, Surat<br>
-              Work: Dryfruit Sales<br>
+              Work: Dryfruit Sales & Gift Packing<br>
                 Instagram : <a href="https://www.instagram.com/kheteshwar_dry_fruits" rel="noreferrer noopener">@kheteshwar_dry_fruits</a>
               </div>
             </div>
@@ -510,9 +510,24 @@
           </div>
         </div>
       </div>
+
+
+      <div class="card-section" id="contact">
+        <div class="card-content">
+          <div class="card-subtitle">CONTACT</div>
+          <p class="card-desc">Coming Soon..
+          </p>
+          <br/>
+          
+        </div>
+      </div>
+
+
+      
       <div class="card-buttons">
         <button data-section="#about" class="is-active">ABOUT</button>
-        <button data-section="#experience">EXPERIENCE</button>
+        <!--button data-section="#experience">EXPERIENCE</button-->
+        <button data-section="#contact" class="is-active">CONTACT</button>
       </div>
     </div>
   </div>
