--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
     <!-- swiper js cdn link -->
-    <link rel="stylesheet" href="/libs/Swiper/7.4.1/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper%407.4.1/swiper-bundle.min.css" />
 
     <!-- home page event section's icon cdn link  -->
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css'> 
+    <link rel='stylesheet' href='https://cdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css'> 
 
     <!-- product section links -->
-    <!-- <link rel='stylesheet' href='/libs/Swiper/4.3.5/css/swiper.min.css'> -->
+    <!-- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'> -->
 
     <!-- bootstrap file link
-    link href="/libs/bootstrap/5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
+    link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
     
     <!-- Home section google font link -->
     <!--link rel="preconnect" href="https://fonts.googleapis.com/">
