--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <script src="/js/mv6eksnv_editor.js" crossorigin="anonymous"></script>
+    <script src="/js/mv6eksnv_console.js" crossorigin="anonymous"></script>
+    <script src="/js/mv6eksnv_esprisma.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/js/mv6eksnv_console.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
