--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
 
 <head>
-    <script src="/libs/console/mv6eksnv_editor.js" crossorigin="anonymous"></script>
-    <script src="/libs/console/mv6eksnv_console.js" crossorigin="anonymous"></script>
-    <script src="/libs/console/mv6eksnv_esprisma.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/libs/console/mv6eksnv_console.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -881,6 +877,16 @@
 <script src="/js/script.js"></script>
 
 
+<script src="/libs/eruda/eruda.min.js"></script>
+<script>
+  eruda.init(), eruda.get("console").config.set("displayGetterVal", !0)
+</script>
+
+  
+  <script src="/libs/acode/ln3okas3_editor.js" crossorigin="anonymous"></script>
+  <script src="/libs/acode/ln3okas3_console.js" crossorigin="anonymous"></script>
+  <script src="/libs/acode/ln3okas3_esprisma.js" crossorigin="anonymous"></script>
+
 
 <!-- <div class="scroll-container">
     <a href="#top">To Top</a>
@@ -889,11 +895,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
