--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper%407.4.1/swiper-bundle.min.css" />
 
     <!-- home page event section's icon cdn link  -->
-    <link rel='stylesheet' href='https://cdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css'> 
+    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css'> 
 
     <!-- product section links -->
     <!-- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css'> -->
@@ -873,7 +873,7 @@
 
 
 
-<script src="/libs/swiper/7.4.1/swiper-bundle.min.js"></script>
+<script src="/libs/Swiper/7.4.1/swiper-bundle.min.js"></script>
 
 <!-- custom js file link  -->
 <script src="/js/script.js"></script>
