--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/x-icon" href="/images/tablogo.png">
 
     <!-- font awesome cdn link  -->
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
     <!-- swiper js cdn link -->
     <link rel="stylesheet" href="https://unpkg.com/swiper%407.4.1/swiper-bundle.min.css" />
