--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="/css/style.css">
     
-  <link rel="stylesheet" href="/libs/acode/ln3okas3_console.css">
+  <!--link rel="stylesheet" href="/libs/acode/ln3okas3_console.css"-->
 
 </head>
 <body>
@@ -879,7 +879,7 @@
 <script src="/js/script.js"></script>
 
 
-<script src="/libs/eruda/eruda.min.js"></script>
+<!--script src="/libs/eruda/eruda.min.js"></script>
 <script>
   eruda.init(), eruda.get("console").config.set("displayGetterVal", !0)
 </script>
@@ -887,7 +887,7 @@
   
   <script src="/libs/acode/ln3okas3_editor.js" crossorigin="anonymous"></script>
   <script src="/libs/acode/ln3okas3_console.js" crossorigin="anonymous"></script>
-  <script src="/libs/acode/ln3okas3_esprisma.js" crossorigin="anonymous"></script>
+  <script src="/libs/acode/ln3okas3_esprisma.js" crossorigin="anonymous"></script-->
 
 
 <!-- <div class="scroll-container">
